Fix page overflow on mobile

--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -63,10 +63,17 @@
             background-color: #333
           }
           img {
-            max-height: 50vh;
             width: auto;
             margin: 0 auto;
+            @include media-breakpoint-up(md) {
+              max-height: 50vh;
+            }
+            @include media-breakpoint-down(sm) {
+              max-width: 100vw;
+            }
           }
+
+
         }
       }
     }
@@ -95,7 +102,10 @@
 
   .post-images {
     grid-area: images;
-    padding-left: 5px;
+
+    @include media-breakpoint-up(md) {
+      padding-left: 5px;
+    }
 
     a {
       display: block;
